--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
     "precommit": "npm run lint"
   },
   "dependencies": {
+    "@nuxtjs/font-awesome": "^1.0.3",
     "bootstrap": "^4.1.3",
     "bootstrap-vue": "^2.0.0-rc.11",
     "nuxt": "^1.0.0",
-    "survey-vue": "^1.0.41",
-    "surveyjs-widgets": "^1.0.41"
+    "survey-vue": "^1.0.42",
+    "surveyjs-widgets": "^1.0.42"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.1",
@@ -26,6 +27,8 @@
     "eslint-loader": "^1.7.1",
     "eslint-plugin-vue": "^4.0.0",
     "node-sass": "^4.9.3",
-    "sass-loader": "^7.1.0"
+    "sass-loader": "^7.1.0",
+    "nuxt-sass-resources-loader": "^2.0.5",
+    "sass-resources-loader": "^1.3.3"
   }
 }
